--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2390,7 +2390,7 @@ color
 }
 .archives .archive-article-title {
   font-size: 16px;
-  color: #999;
+  color: #4094c3;
   -webkit-transition: color 0.3s;
   -moz-transition: color 0.3s;
   -ms-transition: color 0.3s;
@@ -3082,7 +3082,7 @@ color
 }
 .archives .archive-article-title {
   font-size: 16px;
-  color: #999;
+  color: #4094c3;
   -webkit-transition: color 0.3s;
   -moz-transition: color 0.3s;
   -ms-transition: color 0.3s;
